# sobel

./: CMakeLists.txt
include/: kernel.hpp  sobel.hpp  utils.hpp
src/: kernel.cpp  main.cpp  sobel.cpp  utils.cpp
